[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remote-sensing-tools"
version = "3.0.0"
description = "Landsat 8 remote sensing preprocessing toolkit."
requires-python = ">=3.10"
authors = [
  { name = "李旭东" }
]
dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "python-multipart>=0.0.6",
  "numpy>=1.24.0",
  "gdal>=3.6.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "Py6S>=1.9.2",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
  "pystac-client>=0.8.0",
  "planetary-computer>=1.0.0"
]

[project.scripts]
rstool = "remote_sensing_tools.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["remote_sensing_tools*"]
